# Elana

./: .gitignore  README.md  pyproject.toml  run.sh
elana/: cli.py  energy.py  logger_utils.py  main.py  profiler.py  size.py  trace_handler.py
jetson/orin_jp6/: README.md  clean_memory.sh  download_cudss.sh  install_packages.sh  requirements.txt  run.sh
jetson/thor_jp7/: README.md  download_cudss.sh  install_packages.sh  requirements.txt  run.sh
